line height change to 16px for p

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
 p{
   font-weight: 100;
   font-weight: 100;
-  font-size: 12px;
+  font-size: 14px;
+  line-height: 16px;
   padding: 5px;
   margin: 5px;
 }
