--- a/style.css
+++ b/style.css
@@ -85,9 +85,8 @@ div{
   background-color: #FEFEFC;
 }
 .container-first{
-  margin:10px auto;
-  padding-top: 0;
-  padding-bottom: 10px;
+  margin:0px auto;
+  padding: 10px;
   width: 650px;
   border: 2px solid #F9F9F2;
   border-radius: 5px;
@@ -108,7 +107,7 @@ div{
   width: 100%;
 }
 
-.sticky + .container-first{
+.sticky + .container{
   padding-top: 60px;
 }
 
